# ChangeLog for dev-libs/libmcs
# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-libs/libmcs/ChangeLog,v 1.40 2008/05/27 16:19:37 chainsaw Exp $

*libmcs-0.7.1-r2 (27 May 2008)

  27 May 2008; <chainsaw@gentoo.org> -libmcs-0.7.1-r1.ebuild,
  +libmcs-0.7.1-r2.ebuild:
  Drop broken KDE functionality more aggressively, closes bug #223849.

  18 May 2008; Samuli Suominen <drac@gentoo.org> libmcs-0.6.0.ebuild:
  Move pkgconfig to DEPEND.

*libmcs-0.7.1-r1 (17 May 2008)

  17 May 2008; <chainsaw@gentoo.org> +libmcs-0.7.1-r1.ebuild:
  Drop KDE functionality as it stopped working. Simplify ebuild. Closes bug
  #222453.

*libmcs-0.7.1 (20 Apr 2008)

  20 Apr 2008; <chainsaw@gentoo.org> libmcs-0.7.0.ebuild,
  +libmcs-0.7.1.ebuild:
  Upstream version bump to 0.7.1; the gconf backend now functions correctly.
  Revise pkg-config dependency.

  11 Apr 2008; Tony Vroon <chainsaw@gentoo.org> libmcs-0.6.0.ebuild,
  libmcs-0.7.0.ebuild:
  Add explicit pkg-config dependency to make Evil Compile Person happy,
  closes bug #216401.

*libmcs-0.7.0 (18 Feb 2008)

  18 Feb 2008; Tony Vroon <chainsaw@gentoo.org> -libmcs-0.4.1.ebuild,
  -libmcs-0.5.0.ebuild, +libmcs-0.7.0.ebuild:
  Version bump. Remove old ebuilds, MIPS broke 0.4.1 wrt KDE dependencies.

  29 Jan 2008; Samuli Suominen <drac@gentoo.org> libmcs-0.6.0.ebuild:
  amd64 stable wrt #198820

  16 Jan 2008; Raúl Porcel <armin76@gentoo.org> libmcs-0.6.0.ebuild:
  alpha stable wrt #198820, thanks to Tobias Klausmann for testing

  16 Jan 2008; Ferris McCormick <fmccor@gentoo.org> libmcs-0.6.0.ebuild:
  Sparc stable, part of Bug #198820.

  16 Jan 2008; Brent Baude <ranger@gentoo.org> libmcs-0.6.0.ebuild:
  Marking libmcs-0.6.0 ppc and ppc64 for bug 198820

  15 Jan 2008; Jeroen Roovers <jer@gentoo.org> libmcs-0.6.0.ebuild:
  Stable for HPPA (bug #198820).

  15 Jan 2008; Tony Vroon <chainsaw@gentoo.org> libmcs-0.6.0.ebuild:
  Marked stable on X86.
