@@ -6,14 +6,14 @@ DIST libmcs-0.7.0.tgz 106300 RMD160 5817fcba32b0c697594bbb8fa2647654f290c383 SHA
 DIST libmcs-0.7.1.tgz 107684 RMD160 4deb72bd417394a484a689bb4dc58bc1a6a563ba SHA1 498a8ace5bc171cb8999ecf8c77cab59c6ded4bb SHA256 73799477e8089a59edf313b0a13813dcd3a76d0df4ef0ce224670fee1e409504
 EBUILD libmcs-0.6.0.ebuild 1087 RMD160 320b83f8e2669ec8b8e000959db86dfe05eec05b SHA1 bfb86e9b4b04c73a0a9b62aacf0b03eb580c5c3b SHA256 f7e1df8f759a9caac1144b558992f31e083731678585d47d67495c3f94b5f80a
 EBUILD libmcs-0.7.0.ebuild 1105 RMD160 e5cfb60a5fb51e51e2960f2277ee15c504651311 SHA1 c24853749ef629fe56e0cbe10af36b179d38d20f SHA256 48fcc4381cfd5c988b84957293e3bb093074e418e391f72c4305c828afa2f374
-EBUILD libmcs-0.7.1-r2.ebuild 879 RMD160 82689603d82a5e24deb11220985ef77b704a8ccf SHA1 e120b3cdafc196da42ddbc342b46e247f9648657 SHA256 dfc4026977dbc7bda42c7a1f9673c3b6fea826fb6558cbdf3570fbab92f5032c
+EBUILD libmcs-0.7.1-r2.ebuild 880 RMD160 6939dc14867102ff9b7e22b8810d5cbf1bea8404 SHA1 a19e23e409a9d68b5c8ee243aa98b93289a7dcbc SHA256 97b01d69a39a2db8c0ea09007e3b0d9bd79fac860631a3795e41dac3eba1d2a6
 EBUILD libmcs-0.7.1.ebuild 1105 RMD160 c35dcb60e383e8d7913e93043b16280579ba35b6 SHA1 a45ff60f59c5b48832d08418d8823f2d404c83d6 SHA256 ebdff75faadcf22c755048618ac3649f01b94cb9e70461760107a14bd7dfc52f
-MISC ChangeLog 5745 RMD160 9c36e8b7b6c80961c342cd461044d58b13a5f95e SHA1 6763ab794c7ee05618f8d8c0650881fa00ab1f5d SHA256 aa9c978ead6d76e69857a2e6fc80d422bc13ae68e94656e94daa062194a2f68e
+MISC ChangeLog 5855 RMD160 73052747a44289a531edd37699e4febbbe70e5eb SHA1 62bd46032854c81c50751253d10aa24c91720a50 SHA256 fdc54fbedd0fef288a051ab4aa5a47fa3cc3477c75cabdfd6827153871664cef
 MISC metadata.xml 310 RMD160 5b57282cd45b5ebfd0a5182cd665dbb684a7d25c SHA1 9f12cf187b3a67133f2ae900cf70fcc7f7a27b9a SHA256 c63ceb5c6294486637d1c424469d11db066aa906dc970e9be311c29a6563a3c6
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.9 (GNU/Linux)
 
-iEYEARECAAYFAkg8NHEACgkQp5vW4rUFj5qs8gCfZoiGESeN7BTijsHjpayAH+NH
-cyIAoLqh53b57s+Ca3zB06uor+PlF0ZR
-=sCnD
+iEYEARECAAYFAkjpyssACgkQAiZjviIA2XhlnACeMJic+jN9tnNlsPcIEYiIbGl3
+SyAAoIgGgMqUceJJGVqwsn8iC6oxsX8g
+=r4Mw
 -----END PGP SIGNATURE-----
