@@ -1,6 +1,6 @@
 # Copyright 1999-2008 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/dev-libs/libmcs/libmcs-0.7.1-r2.ebuild,v 1.1 2008/05/27 16:19:37 chainsaw Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-libs/libmcs/libmcs-0.7.1-r2.ebuild,v 1.2 2008/10/06 08:22:29 flameeyes Exp $
 
 DESCRIPTION="Abstracts the storage of configuration settings away from applications."
 HOMEPAGE="http://sacredspiral.co.uk/~nenolod/mcs/"
@@ -11,10 +11,10 @@ SLOT="0"
 KEYWORDS="~alpha ~amd64 ~hppa ~mips ~ppc ~ppc64 ~sparc ~x86 ~x86-fbsd"
 IUSE="gnome"
 
-DEPEND=">=dev-util/pkgconfig-0.9.0
-	${RDEPEND}"
 RDEPEND=">=dev-libs/libmowgli-0.6.1
 	gnome? ( >=gnome-base/gconf-2.6.0 )"
+DEPEND=">=dev-util/pkgconfig-0.9.0
+	${RDEPEND}"
 
 src_compile() {
 	econf \
