@@ -5,14 +5,14 @@ AUX mpatrol-1.4.8-soname.patch 1097 RMD160 d0d767d24c51b8804691b416ac47d59bee8d4
 AUX mpatrol-textrel-fix.patch 529 RMD160 e0ef6ab28b24c2261a88e682d1f59ed0c681a328 SHA1 e6b65eb79fc334cb1f82214ed3c0000890e1e876 SHA256 23566db6fe6e035870db35e7311f42c2a367a50ec1a24b044a465fa7fe81f30b
 DIST mpatrol_1.4.8.tar.gz 4413896 RMD160 5caa6a31f1a53578f28ff597e62c010d68320bc0 SHA1 26b3ef60a718f80486f10f74468cb33b5fcf75dd SHA256 2a58512cb355bf46b08e85683a2ad872bdd4cad5f7a40c87117c7f5badd9f232
 EBUILD mpatrol-1.4.8-r1.ebuild 2474 RMD160 84d3ccf9a43617e61c539e20ef9bf4b4894c104a SHA1 9338ebed4ccc022e6be9a1f463beda34c2783b4f SHA256 9d3c026616eb987daebc0dfbbb1f44414d3ea8d310f0862b62176000dbf3856a
-EBUILD mpatrol-1.4.8-r2.ebuild 2744 RMD160 d25163ab8acd2292bfad21333b938f4020a72642 SHA1 4e457d1479490a584cd2bd46a1b01199d3706709 SHA256 2dfa5de9e3ecfdf12f17604534c27404d43ad06adc229e0a619e3dadc101bc94
+EBUILD mpatrol-1.4.8-r2.ebuild 2726 RMD160 81a4a881c40ec3589a34273b94df98d882085d66 SHA1 63d8acec39bf5777e1291af45e9b6700a2261760 SHA256 168663481c4535bdef2fd28e445308f79f078703b5b0e65182f62d377cbab901
 EBUILD mpatrol-1.4.8.ebuild 2237 RMD160 40bf9b2a781713a17c2079501392906d63fd5124 SHA1 c1fdda03971cd2a244a30d1ac688e1b843d10df7 SHA256 3de5cbf16b62a4e6c057ec3e974c1586bc086f60a4605769852bf7bbdb571e6a
-MISC ChangeLog 1561 RMD160 40b6d913df8072eb4ec5cddae333ebb5c84f259e SHA1 971b41b438410a5aa4a35858eceae466f251a82a SHA256 ede994717cdcc38ce20a8b29b5326476ef69a9762b18e53a1905228c8ebd3c1b
+MISC ChangeLog 1727 RMD160 8fa3da2491371d31c1fda5b464358e682b5cadf2 SHA1 42dadb605a92172ef10b806ae6a70f6965d25706 SHA256 d7b2ffc2c0a1711177d171aa67bdd60bdd266c2018389dc19f39fbcf12275654
 MISC metadata.xml 290 RMD160 b9b86283c09349c8827faef7d3ef5f724a248e77 SHA1 ae1c8e62d75c94ff50b8a5391afb6008460963aa SHA256 380e26e9262298b9cb31e863a9ab641f6fbdc8c50bda2cf2e47fd399f9cb5e85
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v2.0.7 (GNU/Linux)
+Version: GnuPG v2.0.9 (GNU/Linux)
 
-iD8DBQFIDMuWyuNVb5qfaOYRAn3rAJ0YZin4opJwIZbWHZLBdELsyHGe4ACguNNy
-mltEpxP/KlXZ9nXoxF3gzLo=
-=KN/N
+iEYEARECAAYFAkjpy1YACgkQAiZjviIA2Xin/gCgz2IEmNSJ2cLIrHEwjRZ9Rbo4
+6/AAoMIN5mpHcYDD+hp8Qr0cgaDOL8I4
+=tH/G
 -----END PGP SIGNATURE-----
